--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ main {
   margin: 2rem auto;
   max-width: 1000px;
   padding: 1rem;
+  transition: all 1s;
+  opacity: 100%;
 }
 .balance {
   width: 100%;
@@ -104,8 +106,45 @@ main {
   overflow-y: auto;
   margin-block: 0rem 1rem;
   border-radius: 10px;
+  min-width: 450px;
 }
-
+.movement__move {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem;
+  border-bottom: 1px solid rgb(236, 236, 236);
+}
+.move__label {
+  padding: 0.16rem 1rem;
+  border-radius: 10px;
+  font-size: 1.1rem;
+  color: white;
+  text-transform: uppercase;
+}
+.move__label--in {
+  background: rgb(167, 230, 90);
+  background: linear-gradient(
+    135deg,
+    rgb(167, 230, 90) 0%,
+    rgb(55, 158, 8) 100%
+  );
+}
+.move__label--out {
+  background: rgb(255, 136, 136);
+  background: linear-gradient(
+    135deg,
+    rgb(255, 136, 136) 0%,
+    rgb(207, 15, 15) 100%
+  );
+}
+.move__date {
+  font-size: 1.5rem;
+}
+.move__amount {
+  margin-left: auto;
+  font-size: 2rem;
+}
 .info__form {
   padding: 1rem 2rem;
   display: flex;
